[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "geoxyz-scraper"
version = "0.0.0"
description = "Python package to scrape geospatial XYZ tiles"
readme = "README.md"
authors = [
  {email = "marti.bosch@epfl.ch", name = "Martí Bosch"}
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  # see https://github.com/google/python-fire/pull/588/files
  "fire @ https://github.com/google/python-fire/archive/refs/heads/2025-03-23-ipython.zip",
  "geopandas >= 1.0.0",
  "numpy >= 2.0.0",
  "opencv-python > 4.0.0",
  "osmnx >= 1.0.0",
  "pandas >= 2.0.0",
  "pyregeon",
  "pyyaml",
  "rasterio >= 1.0.0",
  "requests",
  "tqdm"
]

[project.license]
text = "GPL-3.0"

[project.optional-dependencies]
dev = [
  "build",
  "commitizen",
  "pip",
  "pre-commit",
  "toml",
  "tox",
  "twine"
]
doc = [
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinxemoji"
]
test = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "ruff"
]

[project.scripts]
geoxyz-scraper = "geoxyz_scraper.cli:main"

[project.urls]
Repository = "https://github.com/martibosch/geoxyz-scraper"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_scheme = "semver"

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "except ModuleNotFoundError",
  "except ImportError"
]
ignore_errors = true
omit = ["tests/*", "docs/conf.py"]

[tool.coverage.run]
source = ["geoxyz_scraper"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "D",
  "E",
  "F",
  "I"
]

[tool.ruff.lint.isort]
known-first-party = [
  "geoxyz_scraper"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401"
]
"tests/test_geoxyz_scraper.py" = [
  "D"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "geoxyz_scraper"
module-root = ""

# [tool.tox.gh.python]
# "3.10" = [
# "3.10"
# ]
# "3.11" = [
# "3.11"
# ]
# "3.12" = [
# "3.12"
# ]
# "3.13" = [
# "3.13",
# "lint"
# ]
